--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -51,32 +51,34 @@
                             <ng-template ngbNavContent>
                               <div class="mb-0">
                                   <form  class="tablelist-form" autocomplete="off" [formGroup]="studentForm">
-                                        <div class="mb-3">
+                                    <div class="row g-3">
+                                        <div class="col-lg-6">
                                             <label for="familyName" class="form-label">Family Name <span class="text-danger">*</span></label>
                                             <input  type="text" id="familyName" class="form-control" placeholder="Enter Family Name" formControlName="familyName" required [ngClass]="{ 'is-invalid': submitted && fStudent['familyName'].invalid }">
                                             <div class="invalid-feedback">Family name is required</div>
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="col-lg-6">
                                             <label for="givenNames" class="form-label">Given Names <span class="text-danger">*</span></label>
                                             <input  type="text" id="givenNames" class="form-control" placeholder="Enter Given Names" formControlName="givenNames" required [ngClass]="{ 'is-invalid': submitted && fStudent['givenNames'].invalid }">
                                             <div class="invalid-feedback">Given name(s) is(are) required</div>
                                         </div>
-                                        <div class="mb-3">
-                                            <label class="form-label mb-0">Date Of Birth <span class="text-danger">*</span></label>
+                                        <div class="col-lg-6">
+                                            <label class="form-label">Date Of Birth <span class="text-danger">*</span></label>
                                             <input class="form-control flatpickr-input" type="text" mwlFlatpickr [altInput]="true" [convertModelValue]="true" altFormat="F j, Y" dateFormat="Y-m-d" required formControlName="dateOfBirth" [ngClass]="{ 'is-invalid': submitted && fStudent['dateOfBirth'].invalid }" placeholder="Select Date of Birth" />
                                             <div class="invalid-feedback">Date of birth is required</div>
                                          </div>
-                                         <div class="mb-3">
-                                            <label for="sex" class="form-label">Gender <span class="text-danger">*</span></label>
-                                            <select id="sex" class="form-select" formControlName="sex" [ngClass]="{ 'is-invalid': submitted && fStudent['sex'].errors }">
-                                              <option [ngValue]="null" disabled selected>Select Gender </option>
-                                              <option *ngFor="let sex of sexOptions" [value]="sex.dataCode">{{ sex.text }}</option>
-                                            </select>
-                                            <div class="invalid-feedback">Sex is required</div>
+                                         <div class="col-lg-6">
+                                             <label for="sex" class="form-label">Gender <span class="text-danger">*</span></label>
+                                             <select id="sex" class="form-select" formControlName="sex" [ngClass]="{ 'is-invalid': submitted && fStudent['sex'].errors }">
+                                                 <option [ngValue]="null" disabled selected>Select Gender </option>
+                                                 <option *ngFor="let sex of sexOptions" [value]="sex.dataCode">{{ sex.text }}</option>
+                                                </select>
+                                                <div class="invalid-feedback">Sex is required</div>
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="col-lg-12">
                                             <label for="admissionNumber" class="form-label">Admission Number</label>
-                                            <input  type="text" id="admissionNumber" class="form-control" placeholder="Enter Admission Number" formControlName="admissionNumber">
+                                            <input type="text" id="admissionNumber" class="form-control" placeholder="Enter Admission Number" formControlName="admissionNumber">
+                                        </div>
                                         </div>
                                     </form>
                               </div>
@@ -106,23 +108,25 @@
                             <a ngbNavLink><span class="d-sm-block">Address</span></a>
                             <ng-template ngbNavContent>
                                 <form autocomplete="off" class="tablelist-form" [formGroup]="addressForm">
-                                    <div class="mb-3">
+                                    <div class="row g-3">
+                                    <div class="col-lg-6">
                                         <label class="form-label">Country</label>
                                         <ng-select [items]="countries" bindLabel="name" id="country" bindValue="id" formControlName="countryId" placeholder="Select a country"></ng-select>
                                     </div>
-                                    <div class="mb-3">
+                                    <div class="col-lg-6">
                                         <label for="addressLine1" class="form-label">Address Line 1</label>
                                         <input type="text" class="form-control" id="addressLine1" placeholder="Enter Address Line 1" formControlName="addressLine1">
                                     </div>
-                                    <div class="mb-3">
+                                    <div class="col-lg-6">
                                         <label for="addressLine2" class="form-label">Address Line 2</label>
                                         <input type="text" class="form-control" id="addressLine2" placeholder="Enter Address Line 2" formControlName="addressLine2">
                                     </div>
-                                    <div class="mb-3">
+                                    <div class="col-lg-6">
                                         <label for="postalCode" class="form-label">Postal Code</label>
                                         <input type="text" class="form-control" id="postalCode" placeholder="Enter Postal Code" formControlName="postalCode">
                                     </div>
                                     <div id="newForm" style="display: none;"></div>
+                                    </div>
                                 </form>
                             </ng-template>
                         </li>
@@ -130,9 +134,9 @@
                             <a ngbNavLink><span class="d-sm-block">Enrollment</span></a>
                             <ng-template ngbNavContent>
                                 <form autocomplete="off" class="tablelist-form" [formGroup]="enrollmentForm">
-                                    <div class="mb-0">
-                                        <div class="mb-3">
-                                            <label class="form-label mb-0">Auto Enroll <span class="text-danger">*</span></label>
+                                    <div class="row g-3">
+                                        <div class="col-lg-6">
+                                            <label class="form-label">Auto Enroll <span class="text-danger">*</span></label>
                                             <select class="form-select" aria-label=".form-select-sm" formControlName="autoEnroll" [ngClass]="{ 'is-invalid': submitted && fEnrollment['autoEnroll'].invalid }">
                                                 <option selected [ngValue]="null">Select Option</option>
                                                 <option [ngValue]="true">Yes</option>
@@ -140,17 +144,17 @@
                                             </select>
                                             <div class="invalid-feedback" *ngIf="submitted && fEnrollment['autoEnroll'].invalid">Please select an option</div>
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="col-lg-6">
                                             <label class="form-label">Academic Year</label>
                                             <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && fEnrollment['academicYearId'].invalid }"></ng-select>
                                             <div class="invalid-feedback">Please select an academic term</div>
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="col-lg-6">
                                             <label class="form-label">Class</label>
                                             <ng-select [items]="classes" bindLabel="name" id="class" bindValue="id" formControlName="classId" placeholder="Select Class" [ngClass]="{ 'is-invalid': submitted && fEnrollment['classId'].invalid }"></ng-select>
                                             <div class="invalid-feedback">Please select a class</div>
                                         </div>
-                                        <div class="mb-3">
+                                        <div class="col-lg-6">
                                             <label class="form-label">Class Section</label>
                                             <ng-select [items]="classSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section"></ng-select>
                                         </div>
@@ -166,8 +170,8 @@
         </div>
         <div class="modal-footer">
             <div class="hstack gap-2 justify-content-end">
-                <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
-                <button type="submit" class="btn btn-primary" (click)="onSubmitStudent()" id="add-btn">Save</button>
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                <button type="submit" class="btn btn-primary" (click)="onSubmitStudent()" id="add-btn"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
             </div>
         </div>
     </ng-template>
@@ -198,8 +202,8 @@
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                    <button type="submit" class="btn btn-primary"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </form>
