--- a/src/app/pages/school/configuration/exam-types/exam-types.component.html
+++ b/src/app/pages/school/configuration/exam-types/exam-types.component.html
@@ -48,18 +48,19 @@
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="examTypeForm" (ngSubmit)="onSubmit()">
             <div class="modal-body">
-                <div class="mb-3">
+                <div class="row g-3">
+                <div class="col-lg-6">
                     <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
                     <input  type="text" id="name" class="form-control" placeholder="Enter Exam Type Name" formControlName="name" required [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['name'].invalid }">
                     <div class="invalid-feedback">Please enter a name</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label class="form-label">Academic Term <span class="text-danger">*</span></label>
                     <ng-select [items]="academicTerms" bindLabel="name" id="academicTerm" bindValue="id" required formControlName="academicTermId" placeholder="Select Academic Term" [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['academicTermId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic term</div>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label mb-0">Use Weight <span class="text-danger">*</span></label>
+                <div class="col-lg-6">
+                    <label class="form-label">Use Weight <span class="text-danger">*</span></label>
                     <select class="form-select" aria-label=".form-select-sm" formControlName="useWeight" [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['useWeight'].invalid }">
                         <option selected [ngValue]="null">Select</option>
                         <option [ngValue]="true">Yes</option>
@@ -67,20 +68,21 @@
                     </select>
                     <div class="invalid-feedback" *ngIf="submitted && examTypeForm.controls['useWeight'].invalid">Please select an option</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label for="weight" class="form-label">Weight</label>
                     <input type="number" id="weight" class="form-control" placeholder="Enter Weight" formControlName="weight" [ngClass]="{ 'is-invalid': submitted && examTypeForm.controls['weight'].invalid }">
                     <div class="invalid-feedback" *ngIf="submitted && examTypeForm.controls['weight'].invalid">Weight is required when 'Use Weight' is set to Yes</div>
                 </div> 
-                <div class="mb-3">
+                <div class="col-lg-12">
                     <label  class="form-label">Sort Order</label>
                     <input type="number" class="form-control" placeholder="Enter Sort Order" formControlName="sortOrder" >
                 </div> 
             </div>
+            </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
-                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </form>
