--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -40,7 +40,7 @@
                         </div>
                       </ng-template>
                   </li>
-                  <li [ngbNavItem]="2"><a ngbNavLink><i class="ri-menu-add-line"></i> Class Exam Types</a>
+                  <li [ngbNavItem]="2"><a ngbNavLink><i class="ri-stack-line"></i> Class Exam Types</a>
                       <ng-template ngbNavContent>
                         <div class="row">
                             <div class="col-lg-12">
@@ -48,12 +48,12 @@
                                     <div  class="card-header border-bottom-dashed">
                                         <div class="row g-4 align-items-center">
                                             <div class="col-sm">
-                                                <div><h5 class="card-title mb-0"><i class="ri-menu-add-line text-muted fs-18 align-middle me-1">   </i>Class Exam Types</h5></div>
+                                                <div><h5 class="card-title mb-0"><i class="ri-stack-line text-muted fs-18 align-middle me-1">   </i>Class Exam Types</h5></div>
                                             </div>
                                             <div class="col-sm-auto">
                                                 <div class="d-flex flex-wrap align-items-start gap-2">
                                                     <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addClassExamTypeModal(addClassExamTypeContent)"><i class="ri-add-line align-bottom me-1"></i> Add</button>
-                                                    <button class="btn btn-danger add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="deleteClassExamTypeModal(removeClassExamTypeContent)"><i class="ri-delete-bin-line align-bottom me-1"></i> Remove</button>
+                                                    <button class="btn btn-danger add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="deleteClassExamTypeModal(removeClassExamTypeContent)"><i class="ri-delete-bin-line align-bottom me-1"></i> Delete</button>
                                                 </div>
                                             </div>
                                             <div class="col-xl-12">
@@ -116,12 +116,12 @@
                                     <div  class="card-header border-bottom-dashed">
                                         <div class="row g-4 align-items-center">
                                             <div class="col-sm">
-                                                <div><h5 class="card-title mb-0"><i class="ri-menu-add-line text-muted fs-18 align-middle me-1">   </i>Class Subjects</h5></div>
+                                                <div><h5 class="card-title mb-0"><i class="ri-book-2-line text-muted fs-18 align-middle me-1">   </i>Class Subjects</h5></div>
                                             </div>
                                             <div class="col-sm-auto">
                                                 <div class="d-flex flex-wrap align-items-start gap-2">
                                                     <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addClassSubjectModal(updateOrAddClassSubjectContent)"><i class="ri-add-line align-bottom me-1"></i> Add</button>
-                                                    <button class="btn btn-danger add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="deleteClassSubjectModal(removeClassSubjectContent)"><i class="ri-delete-bin-line align-bottom me-1"></i> Remove</button>
+                                                    <button class="btn btn-danger add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="deleteClassSubjectModal(removeClassSubjectContent)"><i class="ri-delete-bin-line align-bottom me-1"></i> Delete</button>
                                                 </div>
                                             </div>
                                             <div class="col-xl-12">
@@ -183,7 +183,7 @@
                         </div>
                     </ng-template>
                   </li>
-                  <li [ngbNavItem]="4"><a ngbNavLink><i class="ri-menu-add-line"></i> Class Groups</a>
+                  <li [ngbNavItem]="4"><a ngbNavLink><i class="ri-stack-line"></i> Class Groups</a>
                     <ng-template ngbNavContent></ng-template>
                 </li>
                 </ul>
