--- a/src/app/pages/school/configuration/academics/academic-periods/academic-periods.component.html
+++ b/src/app/pages/school/configuration/academics/academic-periods/academic-periods.component.html
@@ -46,18 +46,19 @@
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="academicPeriodForm" (ngSubmit)="onSubmit()">
             <div class="modal-body">
-                <div class="mb-3">
+                <div class="row g-3">
+                <div class="col-lg-6">
                     <label class="form-label">Academic Year <span class="text-danger">*</span></label>
                     <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && academicPeriodForm.controls['academicYearId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic year</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label class="form-label">Academic Term <span class="text-danger">*</span></label>
                     <ng-select [items]="academicTerms" bindLabel="name" id="academicTerm" bindValue="id" required formControlName="academicTermId" placeholder="Select Academic Term" [ngClass]="{ 'is-invalid': submitted && academicPeriodForm.controls['academicTermId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic term</div>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
+                <div class="col-lg-12">
+                    <label class="form-label">Is Active <span class="text-danger">*</span></label>
                     <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && academicPeriodForm.controls['isActive'].invalid }">
                         <option selected [ngValue]="null">Select status</option>
                         <option [ngValue]="true">Yes</option>
@@ -65,11 +66,12 @@
                     </select>
                     <div class="invalid-feedback" *ngIf="submitted && academicPeriodForm.controls['isActive'].invalid">Please select an option</div>
                 </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
-                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </form>
