--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -26,21 +26,23 @@
 
     <ng-template #content role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title" id="modalLabel">Add Rollover</h5>
+            <h5 class="modal-title" id="modalLabel">Rollover Academic Year</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="modal-body">
-                <div class="mb-3">
+            <div class="row g-3">
+                <div class="col-lg-6">
                     <label class="form-label">Source Academic Year<span class="text-danger">*</span></label>
                     <ng-select [items]="activeAcademicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="sourceAcademicYearId" placeholder="Select Source Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['sourceAcademicYearId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic year from</div>
                 </div>
-                 <div class="mb-3">
+                 <div class="col-lg-6">
                     <label class="form-label">Destination Academic Year<span class="text-danger">*</span></label>
                     <ng-select [items]="inActiveAcademicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="destinationAcademicYearId" placeholder="Select Destination Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['destinationAcademicYearId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic year to</div>
                 </div>
+            </div>
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
