--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -207,23 +207,25 @@
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="classForm" (ngSubmit)="onSubmitClass()">
             <div class="modal-body">
-                <div class="mb-3">
+                <div class="row g-3">
+                <div class="col-lg-6">
                     <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
                     <input type="text" id="name" class="form-control" placeholder="Enter class Name" required formControlName="name" [ngClass]="{ 'is-invalid': submittedClass && classF['name'].errors }" />
                     <div class="invalid-feedback">Please enter a name</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label class="form-label">Next Class <span class="text-danger"></span></label>
                     <ng-select [items]="classes" bindLabel="name" id="nextClass" bindValue="id" formControlName="nextClassId" placeholder="Select Next Class"></ng-select>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
+                <div class="col-lg-12">
+                    <label class="form-label">Is Active <span class="text-danger">*</span></label>
                     <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submittedClass && classF['isActive'].invalid }">
                         <option selected [ngValue]="null">Select status</option>
                         <option [ngValue]="true">Yes</option>
                         <option [ngValue]="false">No</option>
                     </select>
                     <div class="invalid-feedback" *ngIf="submittedClass && classF['isActive'].invalid">Please select an option</div>
+                </div>
                 </div>
             </div>
             <div class="modal-footer">
