--- a/src/app/pages/school/configuration/subjects/subjects.component.html
+++ b/src/app/pages/school/configuration/subjects/subjects.component.html
@@ -39,26 +39,27 @@
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="subjectForm" (ngSubmit)="onSubmit()">
             <div class="modal-body">
-                <div class="mb-3">
+                <div class="row g-3">
+                <div class="col-lg-6">
                     <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
                     <input  type="text" id="name" class="form-control" placeholder="Enter Subject Name" formControlName="name" required [ngClass]="{ 'is-invalid': submitted && form['name'].invalid }">
                     <div class="invalid-feedback">Name is required</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label for="code" class="form-label">Code</label>
                     <input  type="text" id="code" class="form-control" placeholder="Enter Subject Code" formControlName="code">
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label for="coefficient" class="form-label">Coefficient <span class="text-danger">*</span></label>
                     <input  type="number" id="coefficient" class="form-control" placeholder="Enter Subject Coefficient" formControlName="coefficient" required [ngClass]="{ 'is-invalid': submitted && form['coefficient'].invalid }">
                     <div class="invalid-feedback">Coefficient required</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label for="description" class="form-label">Description</label>
                     <input type="text" id="description" class="form-control" placeholder="Enter Subject Description" formControlName="description">
                 </div>
-                <div class="mb-3">
-                    <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
+                <div class="col-lg-12">
+                    <label class="form-label">Is Active <span class="text-danger">*</span></label>
                     <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && form['isActive'].invalid }">
                         <option selected [ngValue]="null">Select status</option>
                         <option [ngValue]="true">Yes</option>
@@ -66,11 +67,12 @@
                     </select>
                     <div class="invalid-feedback" *ngIf="submitted && form['isActive'].invalid">Please select an option</div>
                 </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
-                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </form>
