--- a/src/app/pages/school/personnel/teachers/teachers.component.html
+++ b/src/app/pages/school/personnel/teachers/teachers.component.html
@@ -37,7 +37,7 @@
     <app-loading [loading]="loading"></app-loading>
     <ng-template #content role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title">Add Teacher</h5>
+            <h5 class="modal-title">Add Teachers</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
     <form class="tablelist-form" autocomplete="off" autocomplete="off" [formGroup]="addTeacherForm" >
@@ -66,17 +66,19 @@
         </div>
         <form class="tablelist-form" autocomplete="off" autocomplete="off" [formGroup]="teacherSubjectForm" >
            <div class="modal-body">
-            <div class="mb-3">
+            <div class="row g-3">
+            <div class="col-lg-6">
                 <label class="form-label">Teachers <span class="text-danger">*</span></label>
                 <ng-select [items]="selectedTeachers" formControlName="teacherIds" bindLabel="givenNames" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherSubjectForm['teacherIds'].invalid }" placeholder="Select Teachers">
                 </ng-select>
                 <div class="invalid-feedback">You have to select at least one teacher</div>
             </div>
-            <div class="mb-3">
+            <div class="col-lg-6">
                 <label class="form-label">Subjects <span class="text-danger">*</span></label>
                 <ng-select [items]="subjects" formControlName="subjectIds" bindLabel="name" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherSubjectForm['subjectIds'].invalid }" placeholder="Select Subjects">
                 </ng-select>
                 <div class="invalid-feedback">You have to select at least one subject</div>
+            </div>
             </div>
         </div>
         </form>
@@ -96,21 +98,23 @@
         </div>
         <form class="tablelist-form" autocomplete="off" autocomplete="off" [formGroup]="teacherClassForm" >
            <div class="modal-body">
-            <div class="mb-3">
-                <label class="form-label">Teachers <span class="text-danger">*</span></label>
-                <ng-select [items]="selectedTeachers" formControlName="teacherIds" bindLabel="givenNames" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherClassForm['teacherIds'].invalid }" placeholder="Select Teachers">
-                </ng-select>
-                <div class="invalid-feedback">You have to select at least one teacher</div>
-            </div>
-            <div class="mb-3">
+            <div class="row g-3">
+            <div class="col-lg-6">
                 <label class="form-label">Classes <span class="text-danger">*</span></label>
                 <ng-select [items]="classes" formControlName="classIds" bindLabel="name" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherClassForm['classIds'].invalid }" placeholder="Select Classes">
                 </ng-select>
             <div class="invalid-feedback">You have to select at least one class</div>
             </div>
-            <div class="mb-3">
+            <div class="col-lg-6">
                 <label class="form-label">Class Section</label>
                 <ng-select [items]="sections" formControlName="classSectionIds" bindLabel="name" bindValue="id" [multiple]="true"  placeholder="Select Class Sections"></ng-select>
+            </div>
+            <div class="col-lg-12">
+                <label class="form-label">Teachers <span class="text-danger">*</span></label>
+                <ng-select [items]="selectedTeachers" formControlName="teacherIds" bindLabel="givenNames" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherClassForm['teacherIds'].invalid }" placeholder="Select Teachers">
+                </ng-select>
+                <div class="invalid-feedback">You have to select at least one teacher</div>
+            </div>
             </div>
             </div>
         </form>
