--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -5,7 +5,7 @@
             <div class="card-header border-bottom-dashed">
                 <div class="row g-4 align-items-center">
                     <div class="col-sm">
-                        <div><h5 class="card-title mb-0"><i class="ri-calendar-event-line text-muted fs-18 align-middle me-1">     </i>Year Rollover</h5></div>
+                        <div><h5 class="card-title mb-0"><i class="ri-calendar-event-line text-muted fs-18 align-middle me-1">     </i>Rollover</h5></div>
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
